--- a/index.html
+++ b/index.html
@@ -819,7 +819,7 @@
         </div>
         
         <div class="footer">
-            design by Ricardo Silva
+            por Porongo Game Studio
         </div>
     </div>
 
